--- a/config.toml
+++ b/config.toml
@@ -10,12 +10,19 @@ sectionPagesMenu = 'main'
     pre = "home"
     url = "/"
     weight = 1
+  
+  [[menu.main]]
+    name = "GoLang"
+    pre = "go-lang"
+    url = "/go-lang/"
+    weight = 2
     
   [[menu.main]]
     name = "About"
     pre = "about"
     url = "/about/"
-    weight = 1
+    weight = 3
+
 
 [markup]
   defaultMarkdownHandler = 'goldmark'
