--- a/config.toml
+++ b/config.toml
@@ -67,16 +67,16 @@ sectionPagesMenu = 'main'
       unsafe = true
       xhtml = false
   [markup.highlight]
-    anchorLineNos = false
+    anchorLineNos = true
     codeFences = true
-    guessSyntax = false
+    guessSyntax = true
     hl_Lines = ''
     lineAnchors = ''
     lineNoStart = 1
     lineNos = false
     lineNumbersInTable = true
     noClasses = true
-    style = 'monokai'
+    style = 'tango'
     tabWidth = 4
   [markup.tableOfContents]
     endLevel = 3
